# django-remove-field

./: .pre-commit-config.yaml  LICENSE  Makefile  README.md  pyproject.toml
.github/workflows/: actions.yml
django_remove_field/: __init__.py
tests/: models.py  settings.py  tests.py
tests/migrations/: 0001_initial.py
