[tool.isort]
profile = "black"
multi_line_output = 3

[tool.poetry]
name = "django-remove-field"
version = "0.1.0"
description = "Handle deletion of django model field without downtime"
authors = ["Your Name <you@example.com>"]
license = "GPL-3.0-or-later"

[tool.poetry.dependencies]
python = "^3.6"

[tool.poetry.dev-dependencies]
django = ">=2.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
