[tool.isort]
profile = "black"
multi_line_output = 3

[tool.poetry]
name = "django-remove-field"
version = "0.3.0"
description = "Handle deletion of django model field without downtime"
authors = ["tech@klarys.io"]
license = "MIT"

[tool.poetry.dependencies]
python = ">=3.11"

[tool.poetry.dev-dependencies]
django = ">=4.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
