[tool.isort]
profile = "black"
multi_line_output = 3

[project]
name = "django-remove-field"
version = "0.3.2"
description = "Handle deletion of django model field without downtime"
authors = [
    { name = "Klarys Tech Team", email = "tech@klarys.io" },
]
license = "MIT"
license-files = ["LICENSE"]
requires-python = ">=3.11"
readme = "README.md"
classifiers = [
  "Programming Language :: Python :: 3",
  "Framework :: Django",
]
dependencies = [
    "Django >=4.2",
]

[build-system]
requires = ["poetry-core>=1.9.0"]
build-backend = "poetry.core.masonry.api"